--- a/src/components/Home/Slider/Slider.css
+++ b/src/components/Home/Slider/Slider.css
@@ -1,63 +1,3 @@
-/* .slider { */
-/* background-image: url("../../../Assets/slider-bg.png") !important;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat; */
-/* background-color: white !important; */
-/* height: 100vh !important; */
-/* }
-
-.carousel {
-    height: 100vh !important;
-    width: 100% !important;
-}
-
-.carousel-control-next-icon {
-    background-image: url("../../../Assets/next.png") !important;
-}
-
-.carousel-control-prev-icon {
-    background-image: url("../../../Assets/pre.png") !important;
-} */
-
-/* .img-slide {
-    height: 100vh !important;
-    object-fit: cover; */
-/* margin-top: 120px !important; */
-/* height: 550px;
-    width: 650px;
-    border-radius: 50%;
-    object-fit: cover; */
-/* animation: animate 1.5s alternate infinite; */
-/* } */
-
-
-/* @keyframes animate {
-    0% {
-        transform: translateY(0px);
-    }
-
-    100% {
-        transform: translateY(-20px);
-    }
-} */
-
-
-/* .pen {
-    margin-top: 360px !important;
-    margin-left: -20px !important;
-} */
-
-/* .slider-info-header {
-    font-size: 50px;
-    font-weight: 600;
-    color: black;
-}
-
-.slider-info-header span {
-    color: var(--secondColor);
-} */
-
 header {
     background-image: url("../../../Assets/slider-bg.png");
     background-size: cover;
@@ -72,8 +12,7 @@ header {
 .himg {
     width: 70% !important;
     animation: animate 2s alternate infinite;
-    /* width: 750px !important;
-    height: 550px !important; */
+
 }
 
 .header-info {
@@ -143,5 +82,21 @@ header {
     }
     .animateImage{
         display: none;
+    }
+    header{
+        height: 55vh !important;
+    }
+    .header-info{
+    font-size: 30px ;
+    text-align: center !important;
+    margin-left: 40px !important;
+    margin-top: 30px !important;
+    }
+    .headerBtn{
+        width: 60% !important;
+        font-size: 13px !important;
+    font-weight: 600;
+
+       
     }
 }
