courses video component

--- a/src/components/All Courses/AllCourses.css
+++ b/src/components/All Courses/AllCourses.css
@@ -347,3 +347,90 @@
     }
   }
   
+
+  /* course video  */
+
+  .course-video-header{
+    display: flex;
+    width: 100% !important;
+    height: 70px;
+    background-color: var(--secondColor);
+    margin-top: 95px !important;
+    border-bottom: 1px solid #d7dadb  ;
+
+  }
+  .left-video-header{
+    flex: 10;
+    background-color: antiquewhite;
+    justify-content: space-around;
+  }
+  .right-video-header{
+    flex:2;
+    background-color:aliceblue;
+    border-left: 1px solid #d7dadb !important;
+    
+  }
+  .video-header-btn{
+    background-color: var(--firstColor) !important;
+    border-radius: 2 !important;
+    
+  }
+  .video-header-btn2{
+    background-color: var(--firstColor) !important;
+  }
+  .i-house{
+    color: black !important;
+    size: 100px !important;
+  }
+
+
+  .course-video-body{
+   display: flex;
+   height: 100vh !important;
+  }
+  .video-play{
+   flex:9;
+   background-color:#fff;
+   text-align: center;
+  }
+  .video-play iframe{
+    margin-left: 250px;
+  }
+
+  .video-play h2 {
+    margin-bottom: 30px;
+  font-size: var(--fs3);
+  line-height: var(--lh3);
+  font-weight: 600;
+  /* text-align: left; */
+  }
+
+  .side-video-content{
+    flex:3;
+    background-color: aliceblue;
+
+  }
+  .course-sidebar-head h2{
+    padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 25px;
+  margin-top: 0;
+  font-size: var(--fs1);
+  line-height: var(--lh1);
+  font-weight: 600;
+  padding-bottom: 0px;
+  }
+  .course-sidebar-head{
+    border-bottom: 1px solid #d7dadb !important;
+  }
+
+  .lesson{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+    /* margin-top: 25px; */
+    margin-bottom: 25px;
+    border-bottom: 1px solid #d7dadb !important;
+    padding: 5px;
+  }
