--- a/src/components/Career/interview/Interview.css
+++ b/src/components/Career/interview/Interview.css
@@ -1,43 +1,94 @@
-.interview-page {
+.interviewContainer{
+    background-image:url("../../../Assets/slider-bg.png");
+    background-size: cover;
+}
+.interview {
+    background-color: var(--secondColor);
+    text-align: center !important;
+}
+
+.interviewIcon {
+    font-size: 25px !important;
+}
+
+.interviewIcon1 {
+    color: var(--firstColor);
+}
+
+.interviewSpan {
+    font-size: 20px !important;
+    font-weight: 600;
+}
+
+.interviewSpan1 {
+    color: var(--firstColor);
+}
+
+.nav-pills .nav-link:hover {
+    background-color: var(--firstColor);
+}
+
+.interviewInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    justify-content: center;
+    height: 100vh;
+
 }
 
-h1 {
-    font-size: 2em;
+.interviewInfoHeader {
+    margin-bottom: 40px;
+}
+
+.interviewHeader1 {
+    font-size: 50px;
+    font-weight: 600;
     margin-bottom: 20px;
 }
 
-p {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+.interviewHeader2 {
+    text-align: center;
+    color: var(--secondColor)
+}
+.interviewCard{
+    border:1px solid var(--firstColor) !important;
+    transition: 0.8s all ease;
+    padding: 0 5px;
+}
+.interviewCard:nth-child(2){
+    background-color:var(--secondColor) !important;
 }
 
-textarea {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-bottom: 20px;
+.interviewCard:hover{
+    background-color:var(--secondColor) !important;   
+    transform: scale(0.98);
 }
 
-.button-container {
-    display: flex;
-    justify-content: space-between;
+.interviewCardIcon {
+    text-align: center;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color:var(--firstColor);
+    margin: auto;
+    margin-bottom: 15px !important;
 }
 
-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
+.interviewCardIcon i {
+    font-size: 35px;
+    line-height: 70px;
+    color:white;
 }
-
-button:hover {
-    background-color: #3e8e41;
+.interviewCardtext{
+    color:var(--secondColor);
+    font-weight: 500;
+    font-size: 16px;
+    transition: 0.8s all ease;
+}
+.interviewCard:nth-child(2) .interviewCardtext{
+    color:white !important;
+}
+.interviewCard:hover .interviewCardtext{
+    color:white !important; 
 }
