--- a/src/components/All Courses/AllCourses.css
+++ b/src/components/All Courses/AllCourses.css
@@ -419,3 +419,12 @@ cursor: pointer;
    letter-spacing: 1px !important;
     border: 2px solid #4CAF50;
   }
+
+
+  /* @media (max-width: 990px){
+.course-container{
+flex-direction: column;
+align-items: center;
+}
+  } */
+    
