--- a/src/components/Login/Regestiration.css
+++ b/src/components/Login/Regestiration.css
@@ -4,20 +4,27 @@
   justify-content: center;
   align-items: center;
   width: 80%;
-  margin-top: 200px;
+  margin-top: 120px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
+
+.registerContainer {
+  margin-top: 100px !important;
+}
+
 .form {
   text-align: center !important;
 }
+
 .logininput {
   border: none !important;
   background-color: rgb(255, 255, 255) !important;
-  margin: 20px 10px 10px  !important;
+  margin: 20px 10px 10px !important;
   border: 0.5px solid #0188834b !important;
   padding: 15px !important;
 }
+
 .submitbtn {
   background-color: var(--secondColor) !important;
   border: none !important;
@@ -29,67 +36,82 @@
   margin-bottom: 20px;
   font-weight: 600 !important;
 }
+
 .submitbtn:hover {
   opacity: 0.8;
   letter-spacing: 1.5px;
 }
+
 Form {
   margin: 90px 25px;
 }
+
 .loginimg {
   width: 500px !important;
   height: 500px;
   margin-left: 20px !important;
 }
+
 .loginlinks {
   color: var(--firstColor) !important;
   font-size: 16px !important;
   font-weight: 500 !important;
 }
+
 .loginword {
   margin-bottom: 22px !important;
   font-size: 40px;
   font-weight: 600;
   color: var(--secondColor);
 }
+
 .logininput:focus {
   outline: none !important;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(116, 123, 129, 0.15) 0px 2px 6px 2px !important;
 }
+
 .inputhead {
   font-size: 18px;
   font-weight: 500;
   color: var(--secondColor);
 }
+
 .logininput::placeholder {
   color: rgb(145, 147, 147) !important;
 }
+
 @media (max-width: 567px) {
   .loginimg {
     width: 300px !important;
     height: 250px;
     justify-content: center !important;
   }
-  .logininput{
+
+  .logininput {
     margin-right: 20px !important;
   }
-  .loginword{
-text-align: center !important;
+
+  .loginword {
+    text-align: center !important;
   }
 }
+
 @media (min-width: 767px) {
   .loginimg {
     width: 100% !important;
     justify-content: center !important;
   }
-  .logininput{
+
+  .logininput {
     margin-right: 20px !important;
   }
-  .loginword{
+
+  .loginword {
     text-align: center !important;
-      }
+  }
 }
+
 @media (min-width: 1024px) {
   .loginimg {
     width: 500px !important;
@@ -103,10 +125,12 @@ text-align: center !important;
     width: 400px !important;
     margin: 10px 0px;
   }
-  .logininput{
+
+  .logininput {
     margin-right: 20px !important;
   }
-  .loginword{
+
+  .loginword {
     text-align: center !important;
-      }
+  }
 }
