--- a/src/components/Quizzes/quiz.css
+++ b/src/components/Quizzes/quiz.css
@@ -16,41 +16,45 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 900px !important;
+
 }
 
-.welcome-quiz-h{
-font-size: 50px !important;
+.welcome-quiz-h {
+  font-size: 50px !important;
 }
-.welcome-quiz-p{
+.welcome-quiz-p {
   font-size: 18px !important;
-  }
-  .welcome-quiz-btn{
-    background-color: var(--secondColor) !important;
-    border: none !important;
-    margin-top: 30px;
-    width: 38% !important;
-    height: 50px !important;
-    display: block;
-    font-size: 17px !important;
-    padding: 15px !important;
-    margin-bottom: 20px;
-    font-weight: 600 !important;
-  }
-  .welcome-quiz-btn:hover{
-    background-color: var(--firstColor) !important;
-    letter-spacing: 1.5px;
-  }
-  .quiz-title {
-    text-align: center;
-    font-weight: bold !important;
-    font-size: 35px !important;
-    color: var(--secondColor) !important;
-  }
-  .progressbar{
-    /* background-color: var(--secondColor) !important; */
-    margin-top: 20px !important;
-  }
-.start-quiz{
+}
+.welcome-quiz-btn {
+  background-color: var(--secondColor) !important;
+  border: none !important;
+  margin-top: 30px;
+  width: 38% !important;
+  height: 50px !important;
+  display: block;
+  font-size: 17px !important;
+  padding: 15px !important;
+  margin-bottom: 20px;
+  font-weight: 600 !important;
+}
+.welcome-quiz-btn:hover {
+  background-color: var(--firstColor) !important;
+  letter-spacing: 1.5px;
+}
+.quiz-title {
+  text-align: center;
+  font-weight: bold !important;
+  font-size: 35px !important;
+  color: var(--secondColor) !important;
+}
+.progressbar {
+  /* background-color: var(--secondColor) !important; */
+  margin-top: 20px !important;
+  height: 20px !important; 
+  appearance: none !important;
+}
+
+.start-quiz {
   margin-top: 100px !important;
   position: absolute;
   top: 50%;
@@ -62,55 +66,58 @@ font-size: 50px !important;
 .quiz-card {
   height: 600px !important;
   display: block;
-  margin-top: 0em;
-  unicode-bidi: isolate;
+margin-bottom: 30px !important;
+  
+  box-shadow: rgba(210, 209, 209, 0.2) 0px 2px 8px 0px;
+  border: none !important;
 }
 .question-title {
   font-size: 25px !important;
   font-weight: 600 !important;
   margin-bottom: 10px !important;
-  margin-left: 30px !important;
+  
 }
 
 .answer-input {
   transform: scale(2.5);
+  color: blueviolet !important;
+}
+.answer-input[type="radio"]:checked {
+ color: #ca0000 !important; /* Change background color when checked */
 }
 .quiz-ul {
-  font-size: x-large;
+  font-size: 20px !important;
 }
 .quiz-answer {
   margin-left: 30px !important;
 }
 .badge {
   background-color: var(--secondColor) !important;
-  margin-left: 800px !important;
-  margin-top: 40px !important;
+  margin-left: 1000px !important;
+  margin-top: 60px !important;
 }
 .text-center {
   position: relative;
 }
-.done{
-  margin-top: 30px !important;
+.done {
+  margin-top: 60px !important;
   background-color: rgb(255, 255, 255) !important;
   display: block;
-width: 120px !important;
-margin: auto !important;
+  width: 120px !important;
+  margin: auto !important;
 }
-.thanks-quiz{
+.thanks-quiz {
   margin-top: 80px !important;
-}
-.score{
-  margin-top: 100px !important;
-  font-size: 40px !important;
 }
 .form-buttons {
   text-align: center;
   position: absolute;
-  width: 100%;
+  margin-left: 120px !important;
   margin-top: 4rem;
   display: flex;
   justify-content: space-around;
-  margin-left: 30px !important;
+  align-items: center;
+  text-align: center !important;
   /* margin-left: -64px !important; */
   width: 600px;
   height: 30px;
@@ -125,7 +132,6 @@ margin: auto !important;
   font-weight: bold;
   text-transform: uppercase;
   position: relative;
-  
   transition: 0.5s all ease;
 }
 .form-buttons button i {
@@ -149,10 +155,21 @@ margin: auto !important;
 .form-buttons .next,
 .apply {
   background-color: var(--secondColor);
- 
 }
 
 .thank {
   font-size: 70px;
   text-align: center;
+}
+.score{
+  width: 300px !important;
+  
+  background-color: aqua !important;
+  margin: auto;
+  border-radius: 8px ;
+  color: aliceblue;
+  font-size: 30px !important;
+  background-color: var(--secondColor) !important;
+
+  
 }
