--- a/src/components/Quizzes/quiz.css
+++ b/src/components/Quizzes/quiz.css
@@ -170,6 +170,6 @@ margin-bottom: 30px !important;
   color: aliceblue;
   font-size: 30px !important;
   background-color: var(--secondColor) !important;
-
+margin-top: 60px !important;
   
 }
