--- a/src/components/Mylearning/learning.css
+++ b/src/components/Mylearning/learning.css
@@ -2,7 +2,7 @@
     background-image: url('../../Assets/bgg.png');
     background-size: cover;
     background-position: center;
-    height: 200px;
+    height: 250px;
     margin-top: 82px !important;
     text-align: center;
     padding-top: 80px !important;
@@ -15,3 +15,16 @@
     font-weight: 700;
     margin-bottom: 10px !important;
 }
+.mylearning-cards{
+    margin-top: 60px !important;
+    display: flex;
+align-items: center;
+
+ 
+}
+.start-lesson-btn{
+   text-align: center;
+   margin: auto !important;
+   background-color: var(--secondColor) !important;
+}
+
