--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -12,3 +12,14 @@
   .custom-table td {
     background-color: white !important;
   }
+
+  .addCourseBtn{
+    position: fixed;
+    z-index: 11000;
+    bottom: 20px;
+    right: 30px;
+    height: 50px;
+    width: 50px;
+border-radius: 50% !important;
+line-height: 50px;
+  }
