--- a/src/components/Cv/Cv.css
+++ b/src/components/Cv/Cv.css
@@ -1,485 +1,409 @@
-
 :root {
-    --colorBlack: #1a1919;
-    --colorWarning: var(--secondColor);
-    --colorGreen: #34a853;
-    --colorGrey: #d0d0d0;
-    --main-color: var(--secondColor);
-    --btn-hover: #E7BC3C;
-    --bg-cv: #22395D;
-    --firstColor: #018883;
-    --secondColor: #1B3F6B;
+  --colorBlack: #1a1919;
+  --colorWarning: var(--secondColor);
+  --colorGreen: #34a853;
+  --colorGrey: #d0d0d0;
+  --main-color: var(--secondColor);
+  --btn-hover: #e7bc3c;
+  --bg-cv: #0d1c33;
+  --firstColor: #018883;
+  --secondColor: #1b3f6b;
 }
-
-
-
-.btn-cv {
-    background-color: var(--firstColor);
-}
-
-.btn-cv:hover {
-    background-color: var(--secondColor);
-}
-
-
-
-
-
 @media screen and (min-width: 1000px) {
-    .img-art {
-        height: 550px;
-    }
-
-    .nav-link:hover+.nav-link-line {
-        opacity: 1;
-
-    }
+  .img-art {
+    height: 550px;
+  }
+  .nav-link:hover + .nav-link-line {
+    opacity: 1;
+  }
 }
-
 @media screen and (max-width: 1200px) {
-    .nav-link:hover+.nav-link-line {
-        opacity: 1;
-        width: 25%;
-
-    }
-
+  .nav-link:hover + .nav-link-line {
+    opacity: 1;
+    width: 25%;
+  }
 }
-
 @media screen and (min-width: 1200px) {
-    .nav-link:hover+.nav-link-line {
-        opacity: 1;
-
-    }
+  .nav-link:hover + .nav-link-line {
+    opacity: 1;
+  }
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
-
-
-
-
-
 .btn-golden-border {
-    border: 1px solid var(--firstColor);
-    border-radius: 5px;
-    padding: 5px;
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    
+  border: 1px solid var(--firstColor);
+  border-radius: 5px;
+  padding: 5px;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
-
 .active-cv,
 .bg-gold {
-    background-color: var(--firstColor);
+  background-color: var(--firstColor);
 }
 
 .background-transparent {
-    background-color: rgba(205, 204, 204, 0.199);
+  background-color: rgba(205, 204, 204, 0.199);
 }
 
 .btn-gold-hover:hover {
-    background-color: var(--btn-hover);
+  background-color: var(--secondColor);
 }
 
 .form-container input,
 .form-container textarea {
-    background-color: #949292;
-    border: none;
-    color: white;
+  background-color: #ffffff !important;
+  border: none;
+  color: white !important;
 }
-
 .form-container input::placeholder,
 .form-container textarea::placeholder {
-    color: white;
+  color: rgb(160, 160, 160);
 }
 
 .form-container input:placeholder-shown,
 .form-container input:not(:placeholder-shown),
 .form-container textarea:placeholder-shown,
 .form-container textarea:not(:placeholder-shown) {
-    background-color: #312727 !important;
-    color: white;
+  background-color: #e6e6e6 !important;
+  color: rgb(0, 0, 0);
 }
 
 .btns-form-part .btn {
-    width: 13vw;
+  width: 13vw;
 }
 
 .golden-dashed-border {
-    border: 2px dashed var(--secondColor);
-    border-radius: 5px;
+  border: 2px dashed var(--secondColor);
+  border-radius: 5px;
 }
 
 .gold-txt {
-    color: var(--secondColor);
+  color: var(--secondColor);
 }
 
 .small-txt {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .browse-txt {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .cv-container .cv-height {
-    height: 842px;
+  height: 842px;
 }
 
 .cv-container .bg-blue-side {
-    background-color: var(--bg-cv);
+  background-color: var(--bg-cv);
 }
 
 .txt-border-bottom {
-    border-bottom: 3px solid var(--bg-cv);
-    width: 12%;
+  border-bottom: 3px solid var(--bg-cv);
+  width: 12%;
 }
 
 .txt-dark-blue {
-    color: var(--bg-cv);
+  color: var(--bg-cv);
 }
 
 .tiny-txt {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .bg-transparent2 {
-    background-color: rgba(149, 139, 139, 0.199);
+  background-color: rgba(149, 139, 139, 0.199);
 }
 
 .steps {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+  position: relative;
 }
 
 .step-button {
-    transition: .4s;
+  transition: 0.4s;
 }
 
 .step-button[aria-expanded="true"] {
-    background-color: var(--main-color);
-    color: #fff;
+  background-color: var(--main-color);
+  color: #fff;
 }
 
 .step-button[aria-expanded="false"] {
-    background: none;
-    color: white;
+  background: none;
+  color: white;
 }
 
 .done {
-    background-color: var(--main-color);
-    color: #fff;
+  background-color: var(--main-color);
+  color: #fff;
 }
 
 .step-item {
-    z-index: 10;
-    text-align: center;
+  z-index: 10;
+  text-align: center;
 }
 
 #progress {
-    -webkit-appearance: none;
-    position: absolute;
-    width: 95%;
-    z-index: 5;
-    height: 10px;
-    margin-left: 18px;
-    margin-bottom: 18px;
+  -webkit-appearance: none;
+  position: absolute;
+  width: 95%;
+  z-index: 5;
+  height: 10px;
+  margin-left: 18px;
+  margin-bottom: 18px;
 }
 
 /* to customize progress bar */
 #progress::-webkit-progress-value {
-    background-color: var(--main-color);
-    transition: .5s ease;
+  background-color: var(--main-color);
+  transition: 0.5s ease;
 }
 
-.active>.page-link,
+.active.page-link,
 .page-link.active,
 .page-link:hover {
-    color: var(--secondColor) !important;
-    background-color: transparent !important;
-    border: none;
+  color: var(--secondColor) !important;
+  background-color: transparent !important;
+  border: none;
 }
 
 a[aria-label="Next page"],
 a[aria-label="Previous page"] {
-    border: 2px solid var(--secondColor) !important;
-    border-radius: 50% !important;
-    color: var(--secondColor) !important;
+  border: 2px solid var(--secondColor) !important;
+  border-radius: 50% !important;
+  color: var(--secondColor) !important;
 }
 
 .page-item,
 .page-link,
 .pagination {
-    background-color: transparent !important;
-    border: none;
-    color: white;
-    font-size: 20px;
+  background-color: transparent !important;
+  border: none;
+  color: white;
+  font-size: 20px;
 }
-
-.tr-table {
-    opacity: .7;
-    border-bottom: solid 30px transparent !important;
-    background: transparent !important;
-
-}
-
-.thead-table {
-    border-bottom: solid 10px transparent !important;
-
-}
-
 .tr-table:hover {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 td {
-    background-color: #1a1919 !important;
-    padding: 20px !important;
+  background-color: #1a1919 !important;
+  padding: 20px !important;
 }
 
 .bg-Closed {
-    background-color: #d0d0d0;
+  background-color: #d0d0d0;
 }
 
 .btn-cv {
-    background-color: var(--secondColor);
+  background-color: var(--secondColor);
 }
 
 .btn-cv:hover {
-    background-color: #f1b708;
+  background-color: #f1b708;
 }
 
 .article-page-bg {
-    background-color: #1a1919;
-    min-height: 100vh;
+  background-color: #1a1919;
+  min-height: 100vh;
 }
 
 .article-page-bg form input::placeholder {
-    color: rgba(255, 255, 255, 0.365);
+  color: rgba(255, 255, 255, 0.365);
 }
 
 .text-ww,
 .link-f {
-    color: #fff;
+  color: #fff;
 }
 
 .text-ww:hover,
 .link-f:hover {
-    color: var(--secondColor);
+  color: var(--secondColor);
 }
 
 .select-item:hover {
-    background-color: #131313;
+  background-color: #ffffff;
 }
 
 .item-all {
-    width: 100%;
+  width: 100%;
 }
 
 @media screen and (min-width: 400px) {
-    .btn-search {
-        border-radius: 5px;
-    }
+  .btn-search {
+    border-radius: 5px;
+  }
 
-    .inp-search {
-        border-radius: 5px;
-    }
+  .inp-search {
+    border-radius: 5px;
+  }
 }
 
 @media screen and (min-width: 1000px) {
-    .img-art {
-        height: 550px;
-    }
+  .img-art {
+    height: 550px;
+  }
 
-    .btn-search {
-        border-radius: 0 5px 5px 0;
-    }
+  .btn-search {
+    border-radius: 0 5px 5px 0;
+  }
 
-    .inp-search {
-        border-radius: 5px 0 0 5px;
-    }
+  .inp-search {
+    border-radius: 5px 0 0 5px;
+  }
 }
-
-
 .title {
-    text-transform: uppercase;
-    color: #d0d0d0;
-    margin-top: 50px;
-    font-size: 50px;
+  text-transform: uppercase;
+  color: #d0d0d0;
+  margin-top: 50px;
+  font-size: 50px;
 }
-
 .title2 {
-    text-transform: uppercase;
-    color: #d0d0d0;
-    font-size: 44px;
-    transform: rotate(180deg);
-    writing-mode: vertical-lr;
-    display: inline;
-    margin-left: -2px;
-    margin-bottom: -300px;
+  text-transform: uppercase;
+  color: #d0d0d0;
+  font-size: 44px;
+  transform: rotate(180deg);
+  writing-mode: vertical-lr;
+  display: inline;
+  margin-left: -2px;
+  margin-bottom: -300px;
 }
-
 .con1 {
-    margin-top: -40px;
-    margin-left: 20px;
+  margin-top: -40px;
+  margin-left: 20px;
 }
 
 .content {
-    width: 100%;
-    background-color: #03030388;
-    margin-top: 70px;
-    padding: 50px;
+  width: 100%;
+  background-color: #03030388;
+  margin-top: 70px;
+  padding: 50px;
 }
-
 .business {
-    text-transform: uppercase;
-    padding-left: 50px;
-    font-size: 15px;
-    color: #d0d0d0;
+  text-transform: uppercase;
+  padding-left: 50px;
+  font-size: 15px;
+  color: #d0d0d0;
 }
 
 .line {
-    width: 75px;
-    height: 2px;
-    background-color: #bf9830;
-    margin-left: 53px;
-    margin-bottom: 10px;
+  width: 75px;
+  height: 2px;
+  background-color: #bf9830;
+  margin-left: 53px;
+  margin-bottom: 10px;
 }
-
-
 .f-art {
-    margin-left: 55px;
-    font-size: 34px;
-    color: #d0d0d0;
-    text-transform: uppercase;
-    
+  margin-left: 55px;
+  font-size: 34px;
+  color: #d0d0d0;
+  text-transform: uppercase;
 }
 
 .icon {
-    margin-left: 210px;
-    color: #d0d0d0;
+  margin-left: 210px;
+  color: #d0d0d0;
 }
 
 .hour {
-    color: #d0d0d0;
+  color: #d0d0d0;
 }
 
 .par {
-    margin-top: 10px;
-    margin-left: 55px;
-    font-size: 15px;
-    color: #d0d0d0;
+  margin-top: 10px;
+  margin-left: 55px;
+  font-size: 15px;
+  color: #d0d0d0;
 }
 
 .s-art {
-    margin-left: 55px;
-    font-size: 20px;
-    color: #d0d0d0;
-    text-transform: uppercase;
+  margin-left: 55px;
+  font-size: 20px;
+  color: #d0d0d0;
+  text-transform: uppercase;
 }
 
 .par2 {
-    margin-top: px;
-    margin-left: 55px;
-    font-size: 15px;
-    color: #d0d0d0;
+  margin-top: px;
+  margin-left: 55px;
+  font-size: 15px;
+  color: #d0d0d0;
 }
 
 .icon2 {
-    margin-left: 80px;
-    color: #d0d0d0;
-    margin-top: -30px;
+  margin-left: 80px;
+  color: #d0d0d0;
+  margin-top: -30px;
 }
 
 .icon3 {
-    margin-left: 99px;
-    color: #d0d0d0;
-    margin-top: -30px;
+  margin-left: 99px;
+  color: #d0d0d0;
+  margin-top: -30px;
 }
 
-.Skills{
-    background-color: #686867;
-    border-radius: 10px;
+.Skills {
+  background-color: #686867;
+  border-radius: 10px;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.left-side-cv{
-    background-color: rgb(22, 63, 94);
-    color: #bebebe;
+.left-side-cv {
+  background-color: rgb(22, 63, 94);
+  color: #bebebe;
 }
-.info-cv p{
-    background-color: #fff;
-    border-radius: 10px;
-    color: rgb(9, 34, 135);
+.info-cv p {
+  background-color: #fff;
+  border-radius: 10px;
+  color: rgb(9, 34, 135);
 }
-.gradute-cv{
-    color: rgb(234, 234, 235);
+.gradute-cv {
+  color: rgb(234, 234, 235);
 }
-/* .links .links-icon -cv{
-    border:1px solid red;
-    display: grid;
-    grid-template-columns: repeat(3,40%);
-    
-} */
-
-.links p .icon-cv {
-    color: #fff;
-    margin-right: 7px;
-    font-size: 20px;
+.right-side-cv {
+  color: #9a9292;
 }
-.right-side-cv{
-    color: #9a9292;
+.cateigry-cv {
+  color: rgb(42, 62, 116);
 }
-.cateigry-cv{
-    color: rgb(42, 62, 116);
-}
-.line-cv{
-    width: 50px;
-    height: 3px;
-    background-color: rgb(9, 9, 84) !important;
+.line-cv {
+  width: 50px;
+  height: 2px;
+  background-color: rgb(7, 7, 50) !important;
 }
 
-
-
-
-.not-404 {
-    animation: fadeInDown 2s ease-out;
+/* animations */
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate(-80px);
   }
-  
-  .not-found {
-    animation: fadeInUp 2s ease-out;
+  to {
+    opacity: 1;
+    transform: translate(0);
   }
-  /* animations */
-  @keyframes fadeInDown {
-    from {
-      opacity: 0;
-      transform: translate(-80px);
-    }
-    to {
-      opacity: 1;
-      transform: translate(0);
-    }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate(80px);
   }
-  
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translate(80px);
-    }
-    to {
-      opacity: 1;
-      transform: translate(0);
-    }
+  to {
+    opacity: 1;
+    transform: translate(0);
   }
+}
