--- a/src/components/Mylearning/learning.css
+++ b/src/components/Mylearning/learning.css
@@ -11,11 +11,11 @@
 .mylearning-search {
   width: 30% !important;
   height: 50px !important;
-  padding: 40px 0px !important;
+  padding: 30px 0px !important;
   margin: auto !important;
   position: relative;
 }
-.myleraning-search {
+.mylearning-search-icon {
   position: absolute;
   margin-left: 480px !important;
   margin-top: 9px !important;
