--- a/src/components/Login/Regestiration.css
+++ b/src/components/Login/Regestiration.css
@@ -81,6 +81,19 @@ Form {
   color: rgb(145, 147, 147) !important;
 }
 
+.Forgetcontainer{
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 10px !important;
+}
+.forget-form{
+  margin-top: 100px !important;
+  position: absolute;
+  top: 40%;
+  left: 48%;
+  transform: translate(-50%, -50%);
+  width: 800px !important;
+}
+
 @media (max-width: 567px) {
   .loginimg {
     width: 300px !important;
